force-app/main/default/objects/FLM_KD__c/FLM_KD__c.object-meta.xml
<CustomObject>
    <label>FLM KD</label>
    <nameField>
        <label>FLM KD Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FLM KDs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>