force-app/main/default/objects/FLM_KD__c/fields/ConnSizeCode__c.field-meta.xml
<CustomField>
    <fullName>ConnSizeCode__c</fullName>
    <label>ConnSizeCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>