force-app/main/default/objects/FLM_KD__c/fields/EffDia__c.field-meta.xml
<CustomField>
    <fullName>EffDia__c</fullName>
    <label>EffDia</label>
    <precision>13</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>