force-app/main/default/objects/FLM_KD__c/fields/ElemMatlCode__c.field-meta.xml
<CustomField>
    <fullName>ElemMatlCode__c</fullName>
    <label>ElemMatlCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>