force-app/main/default/objects/FLM_KD__c/fields/Kd__c.field-meta.xml
<CustomField>
    <fullName>Kd__c</fullName>
    <label>Kd</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>