force-app/main/default/objects/FLM_KD__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CertificationID__c</columns>
    <columns>ConnSizeCode__c</columns>
    <columns>EffDia__c</columns>
    <columns>ElemMatlCode__c</columns>
    <columns>ElemSizeCode__c</columns>
    <columns>Kd__c</columns>
    <columns>Model__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>PresRatio__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>